# RAGFlow

./: config.py  main.py  pyproject.toml
data/processed/chroma_db/: chroma.sqlite3
src/evaluator/: ragas_eval.py
src/generator/: llm_generator.py
src/pipeline/: rag_pipeline.py
src/preprocess/: chunker.py  cleaner.py  parser.py
src/rerank/: bge_rerank.py
src/retrieval/: bm25_retriever.py  chromadb_retriever.py  fusion.py
