[project]
name = "ragflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "dashscope>=1.25.17",
    "fastapi>=0.136.1",
    "flagembedding>=1.4.0",
    "jieba>=0.42.1",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.46.0",
]
